<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">原厂设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">本软件设置</string>
    <string name="weibo">反馈问题:     http://www.weibo.com/lovejuelian</string>
    <string name="weibo_web"><u>http://www.weibo.com/lovejuelian</u></string>
    <string name="stocks_app">原厂设置</string>
    <string name="not_found_app">无法找到对应的软件或运行出错,请与开发者联系</string>
    <string name="author_name_title">MIUI适配：绝恋。。</string>
    <string name="author_name_summary">点击此处选择反馈问题的方式,感谢您的使用！</string>
    <string name="display_color_title">显示效果</string>
    <string name="gesture_title">手势和动作</string>
    <string name="gesture_summary">使用各种手势与动作以方便您的使用</string>
    <string name="smart_screen_title">智能分屏</string>
    <string name="smart_screen_summary">允许你同时在屏幕分别操作两个应用</string>
    <string name="mipop_title">屏幕助手</string>
    <string name="mipop_summary">启动后,可在屏幕上操作返回、回到桌面、菜单、最近程序等功能，便于单手操作</string>
    <string name="gloves_mode_title">手套模式</string>
    <string name="gloves_mode_summary">增强屏幕灵敏度，便于佩戴手套时操作屏幕.</string>
    <string name="power_manager">电量管理</string>
    <string name="dobly_title">杜比数字+</string>
    <string name="doble_summary">使用蓝牙耳机时杜比效果无效</string>
    <string name="quite_on">快速开机</string>
    <string name="timer_power_title">定时开关机</string>
    <string name="double_wake_title">双击屏幕唤醒</string>
    <string name="double_wake_summary">在关闭屏幕后可通过双击屏幕唤醒,会增加耗电，长期使用可能会飘屏，关闭重开即可。</string>
    <string name="screen_effect_title">屏幕色彩</string>
    <string name="screen_effect_summary">调节屏幕的显示色彩色温效果</string>
    <string name="changelog_title">更新日志</string>
    <string name="changelog_summary">查看MIUI版本更新内容</string>
    <string name="pppoe_title">拨号上网</string>
    <string name="wifi_share_title">WIFI热点共享</string>
    <string name="section1">个性化</string>
    <string name="section2">系统</string>
    <string name="section3">其他</string>
    <string name="connect_pc">连接PC方式</string>
    <string name="storage_point_title">存储位置</string>
    <string name="incoming_ring_title">铃声渐增</string>
    <string name="incoming_ring_summary">来电时铃声渐渐增加</string>
    <string name="default_app_title">默认应用打开方式</string>
    <string name="crt_screen_off_effect_title">旧电视机特效</string>
    <string name="crt_screen_off_effect_summary">当您关闭屏幕时使用炫酷的旧电视特效</string>
    <string name="boot_sound_title">静默开机</string>
    <string name="boot_sound_summary">勾选可以关闭开机音乐</string>
    <string name="reverse_back_key_title">互换按键</string>
    <string name="reverse_back_key_default">返回键在左边(默认)</string>
    <string name="switch_title">单手模式高斯模糊切换</string>
    <string name="switch_dialog_title">鱼和熊掌无法兼得</string>
    <string name="storage_dialog_title">存储位置设置</string>
    <string name="screen_dpi_title">屏幕密度</string>
    <string name="screen_dpi_summary">默认：480,输入范围300~600内</string>
    <string name="screen_dpi_dialog_title">请输入数值</string>
    <string name="app_manager_title">ZTE应用管理</string>
    <string name="app_manager_summary">应用搬家、查看系统使用资源情况等</string>
    <string name="storage_title">存储位置切换</string>
    <string name="mipop_fristkey">默认键</string>
    <string name="longpressgroup">按钮长按事件</string>
    <string name="mipop_keyback">返回键</string>
    <string name="mipop_keyhome">房子键</string>
    <string name="mipop_keymenu">菜单键</string>
    <string name="mipop_keyrecl">任务键</string>
    <string name="switch_camera_title">相机切换</string>
    <string name="read_changelog_fail">读取数据失败或没有数据,请与开发者联系反馈...</string>
    <string name="network_is_close">没有打开网络数据，请打开后重试！</string>
    <string name="camera_sound_title">拍照声音</string>
    <string name="camera_sound_summary">即使是在非静音模式下也不使用拍照声</string>
    <string name="backlong_title">长按返回键启用智能分屏</string>
    <string name="backlong_summary">长按返回键时启用或关闭智能分屏功能</string>
    <string name="double_tap_home_title">双击Home键锁屏</string>
    <string name="double_tap_home_summary">快速双击Home键时关闭屏幕</string>
    <string name="networktype_title">网络类型选择</string>
    <string name="q_and_a_title">疑问解答</string>
    <string name="q_and_a_summary">使用过程遇到问题？来这里瞧瞧！不定期更新内容！</string>
    <string name="sf_sc">护目镜</string>
    <string name="sf_title">打开/关闭护目镜</string>
    <string name="sf_summary">点击后，可以在下拉通知栏设置暗度值\n再次点击则切换到关闭状态，反之开启</string>
    <string name="white_list_lable">点击软件图标添加到白名单</string>
    <string name="home_layout_title">桌面布局</string>
    <string name="oneflash_label">一键刷</string>
    <string name="pay_title">捐赠</string>
    <string name="zfb_title">关于捐赠</string>
    <string name="zfb_summary">ROM的适配过程中非常艰辛，享受MIUI人往往不清楚这个ROM是利用大量私人时间制作，顾不上吃饭、喝水、无数个通宵熬夜研究修复BUG对于我来说都是家常便饭了，捐赠不在乎多少，大家有这份心意就可以了，在这里对捐赠我和心有余而力不足的朋友们致以万分感谢！谢谢你们一直支持我的ROM！希望你们一直支持下去！</string>

</resources>